XWIKI-21586: Language select default opption does not have enough contrast * Widened the selector introduced in the fix for XWIKI-21384 to also match the field concerned by this issue
Note: it's important to not reduce the CSS priority of this selector because it can barely get priority on the bootstrap one (and bootstrap wins ties broken by order)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/forms.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/forms.less
@@ -174,9 +174,9 @@ select[size="0"], select[size="1"] {
 }
 
 // Use color theme defined variables instead of a hard coded color for the bootstrap select
-#mainContentArea .bootstrap-select > .dropdown-toggle.bs-placeholder,
-#mainContentArea .bootstrap-select > .dropdown-toggle.bs-placeholder:hover,
-#mainContentArea .bootstrap-select > .dropdown-toggle.bs-placeholder:focus,
-#mainContentArea .bootstrap-select > .dropdown-toggle.bs-placeholder:active {
+#xwikimaincontainer .bootstrap-select > .dropdown-toggle.bs-placeholder,
+#xwikimaincontainer .bootstrap-select > .dropdown-toggle.bs-placeholder:hover,
+#xwikimaincontainer .bootstrap-select > .dropdown-toggle.bs-placeholder:focus,
+#xwikimaincontainer .bootstrap-select > .dropdown-toggle.bs-placeholder:active {
   .text-muted;
 }
